--- a/ui-ngx/src/scss/constants.scss
+++ b/ui-ngx/src/scss/constants.scss
@@ -31,9 +31,8 @@ $mat-md-lg: "screen and (min-width: 960px) and (max-width: 1819px)";
 
 $primary-hue-3: rgb(207, 216, 220) !default;
 
-$tb-primary-color: #305680;
+$tb-primary-color: #efefef;
 $tb-secondary-color: #527dad;
 $tb-hue3-color: #a7c1de;
 
 $tb-dark-primary-color: #9fa8da;
-
