--- a/ui-ngx/src/app/modules/home/components/dashboard-page/dashboard-page.component.scss
+++ b/ui-ngx/src/app/modules/home/components/dashboard-page/dashboard-page.component.scss
@@ -31,21 +31,25 @@ div.tb-dashboard-page {
     overflow: hidden;
     background-color: #eee;
   }
+
   section.tb-dashboard-title {
     position: relative;
     padding-left: 20px;
     max-height: 60px;
+
     .mat-mdc-form-field.mat-form-field-appearance-fill.tb-appearance-transparent {
       .mat-mdc-text-field-wrapper {
         .mat-mdc-form-field-infix {
           width: 100%;
           padding-top: 20px;
+
           .mat-mdc-floating-label {
             top: 24px;
           }
         }
       }
     }
+
     input.tb-dashboard-title {
       height: 38px;
       font-size: 2rem;
@@ -61,7 +65,7 @@ div.tb-dashboard-page {
     z-index: 13;
     pointer-events: none;
 
-    .dashboard_logo{
+    .dashboard_logo {
       height: 75%;
       margin-right: 16px;
     }
@@ -78,7 +82,7 @@ div.tb-dashboard-page {
   }
 
   .mat-divider-vertical.tb-toolbar-divider {
-    border-right-color: rgba(255,255,255,0.75);
+    border-right-color: rgba(255, 255, 255, 0.75);
     height: 30px;
   }
 
@@ -98,6 +102,7 @@ div.tb-dashboard-page {
         @media #{$mat-gt-sm} {
           margin-top: $toolbar-height;
         }
+
         &.tb-dashboard-toolbar-animated {
           transition: margin-top .3s cubic-bezier(.55, 0, .55, .2);
         }
@@ -124,6 +129,7 @@ div.tb-dashboard-page {
   mat-drawer-container.tb-dashboard-drawer-container {
     mat-drawer-container.tb-dashboard-layouts {
       width: 100%;
+
       &.tb-shrinked {
         width: max(40%, calc(100% - 956px));
 
@@ -150,27 +156,9 @@ div.tb-dashboard-page {
 
   section.tb-header-buttons.tb-enter-edit-mode {
     top: 2px;
+
     .mdc-fab.tb-btn-edit {
       opacity: .5;
-    }
-  }
-
-  section.tb-powered-by-footer {
-    position: absolute;
-    right: 25px;
-    bottom: 5px;
-    z-index: 30;
-    pointer-events: none;
-
-    span {
-      font-size: 12px;
-
-      a {
-        font-weight: 700;
-        text-decoration: none;
-        pointer-events: all;
-        border: none;
-      }
     }
   }
 
