--- a/ui-ngx/src/theme.scss
+++ b/ui-ngx/src/theme.scss
@@ -54,7 +54,7 @@ $tb-mat-indigo: (
 );
 
 $tb-primary: mat.define-palette($tb-mat-indigo);
-$tb-accent: mat.define-palette(mat.$deep-orange-palette);
+$tb-accent: mat.define-palette(mat.$indigo-palette);
 
 $background: (
   background: map_get(mat.$grey-palette, 200)
